--- a/index.html
+++ b/index.html
@@ -8,18 +8,35 @@
 
 <div id = "body">
 <h1>Nova Ferûn</h1>
+<h2>Events</h2>
+<a href="talesofadventure.html">Tales of Adventure</a><br>
 <h2>Magic Items</h2>
 <a href="hagstooth.html">Hag's Tooth</a><br>
 <a href="rockofgravitydetection.html">Rock of Gravity Detection</a>
 
 <h2>Karaktärer</h2>
+<ul>
+    <li>Erik Cederén: Adelsman i <a href="vandrarutposten.html">Vandrar Utposten</a></li>
+    <li>Durkan Brekkir: Dvärgisk krigare och ledare för <a href="vandrarutposten.html">Vandrar Utposten</a></li>
+    <li><a href="odlefolk.html">Ödlefolk</a>
+        <ul>
+            <li>Senarax Döttsbindaren: Ledare av Döttsviskar stammen</li>
+            <li>Aratak Flodspredikaren: Ledare av Flodsvandrar stammen</li>
+            <li>Ursa den Ohörde: Ledare av Skuggblads stammen</li>
+        </ul>
+    </li>
+</ul>
 
 <h2>Grupper</h2>
 
 <h2>Regioner</h2>
 
 <h2>Worldbuilding</h2>
-<a href="etherealplane.html">Ethereal Plane</a>
+<h3><a href="etherealplane.html">Ethereal Plane</a></h3>
+
+<h3>Zetheris</h3>
+Antikt mänskligt rike som nyttjade stor makt och förslavade andra folk runt om dem. Kollapsade för ungefär 1000 år sedan.
+<br><br>
 
 </div>
 </body>
