update added dave

--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
 </head>
 <body>
 
+
+
 <div id = "body">
 <h1>Nova Ferûn</h1>
 <h2>Events</h2>
@@ -25,6 +27,7 @@
             <li>Ursa den Ohörde: Ledare av Skuggblads stammen</li>
         </ul>
     </li>
+    <li><a href="dave.html">Dave</a></li>
 </ul>
 
 <h2>Grupper</h2>
