fixed undying soldier

--- a/index.html
+++ b/index.html
@@ -12,9 +12,15 @@
 <h1>Nova Ferûn</h1>
 <h2>Events</h2>
 <a href="talesofadventure.html">Tales of Adventure</a><br>
+
 <h2>Magic Items</h2>
 <a href="hagstooth.html">Hag's Tooth</a><br>
 <a href="rockofgravitydetection.html">Rock of Gravity Detection</a>
+
+<h2>Statblocks</h2>
+<ul>
+    <li><a href="dave.html">Undying Soldier (Dave)</a></li>
+</ul>
 
 <h2>Karaktärer</h2>
 <ul>
