--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
 <a href="hagstooth.html">Hag's Tooth</a><br>
 <a href="rockofgravitydetection.html">Rock of Gravity Detection</a>
 
+<h2>Regler</h2>
+<a href="permanentasummons.html">Permanenta summons regler och kostnads guideline</a><br>
+
 <h2>Statblocks</h2>
 <ul>
     <li><a href="dave.html">Undying Soldier (Dave)</a></li>
