--- a/dave.html
+++ b/dave.html
@@ -10,7 +10,7 @@
 
 <div id = "body">
 <h1>Dave</h1>
-En odöd soldat från ett okänt antikt rike, vars enda mål i sin odöda existens är att hitta och förgöra den Zetheriska magikerns känd som Verazed.
+En odöd soldat från ett okänt antikt rike, vars enda mål i sin odöda existens är att hitta och förgöra den Zetheriske magikern känd som Verazed.
 <br><br>
 
 <img src="undying soldier (dave).png" alt="undying soldier statblock" width="500">
