--- a/index.html
+++ b/index.html
@@ -41,7 +41,10 @@
 
 <h2>Grupper</h2>
 
-<h2>Regioner</h2>
+<h2>Geografi</h2>
+<a href="novaferunregione.html">Nova Ferûn Region E</a><br>
+<a href="vandrarutposten.html">Vandrar Utposten</a>
+
 
 <h2>Worldbuilding</h2>
 <h3><a href="etherealplane.html">Ethereal Plane</a></h3>
