Added the horse

--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
 
 <h2>Statblocks</h2>
 <ul>
+    <li><a href="adonis.html">Adonis (Warhorse)</a></li>
     <li><a href="dave.html">Undying Soldier (Dave)</a></li>
 </ul>
 
