--- a/adonis.html
+++ b/adonis.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Dave</title>
+<title>Adonis</title>
 <link rel="stylesheet" href="style.css">
 </head>
 <body>
