Fixed the Adonis page

--- a/adonis.html
+++ b/adonis.html
@@ -4,7 +4,7 @@
 <title>Adonis</title>
 <link rel="stylesheet" href="style.css">
 </head>
-<body>
+<body style="background-image: url('fire.gif');">
 
 <div id = "parent"><a href="index.html">Nova Ferûn</a></div>
 
@@ -13,7 +13,9 @@
 Adonis är Laharls häst.
 <br><br>
 
-<img src="adonis (warhorse).png)" alt="adonis statblock" width="500">
+<img src="adonis (warhorse).png" alt="adonis statblock" width="350">
+
+<img src="adonis.jpg" alt="adonis" width="350">
 
 </div>
 
