added javascript indexlink + a bit more
added javascript + small changes like added a <br> to rock of gravity detection.

--- a/etherealplane.html
+++ b/etherealplane.html
@@ -7,7 +7,10 @@
 </head>
 <body>
 
-<div id = "parent"><a href="index.html">Nova Ferûn</a></div>
+<div id = "sidebar">
+<div id = "indexlink"></div>
+</div>
+
 
 <div id = "body">
 
@@ -19,4 +22,5 @@ While in between the border ethereal and the material, a creature can phase thro
 
 </div>
 </body>
+<script src="main.js"></script>
 </html>
