--- a/index.html
+++ b/index.html
@@ -56,4 +56,5 @@ Antikt mänskligt rike som nyttjade stor makt och förslavade andra folk runt om
 
 </div>
 </body>
+<script src="main.js"></script>
 </html>
