--- a/permanentasummons.html
+++ b/permanentasummons.html
@@ -6,7 +6,10 @@
 </head>
 <body>
 
-<div id = "parent"><a href="index.html">Nova Ferûn</a></div>
+<div id = "sidebar">
+<div id = "indexlink"></div>
+</div>
+
 
 <div id = "body">
 <h1>Permanenta Summons</h1>
@@ -77,4 +80,5 @@ Varje level av karaktär korresponderar mot en cr av monster enligt följande ch
 </div>
 
 </body>
+<script src="main.js"></script>
 </html>
