--- a/talesofadventure.html
+++ b/talesofadventure.html
@@ -6,7 +6,10 @@
 </head>
 <body>
 
-<div id = "parent"><a href="index.html">Nova Ferûn</a></div>
+<div id = "sidebar">
+<div id = "indexlink"></div>
+</div>
+
 
 <div id = "body">
 <h1>Tales of Adventure</h1>
@@ -48,4 +51,5 @@ Laharl och Akmenos (the goon squad) hittar en värdefull skatt i haggornas bosta
 Gruppen vilar i staden och får även ett antal gåvor av Senarax, bland dem att hon kommer återuppliva den odöda varelsen känd som Dave.
 </div>
 </body>
+<script src="main.js"></script>
 </html>
