--- a/vandrarutposten.html
+++ b/vandrarutposten.html
@@ -6,7 +6,9 @@
 </head>
 <body>
 
-<div id = "parent"><a href="index.html">Nova Ferûn</a></div>
+<div id = "sidebar">
+<div id = "indexlink"></div>
+</div>
 
 <div id = "body">
 <h1>Vandrar Utposten</h1>
@@ -17,4 +19,5 @@
 </div>
 
 </body>
+<script src="main.js"></script>
 </html>
