--- a/adonis.html
+++ b/adonis.html
@@ -6,7 +6,9 @@
 </head>
 <body style="background-image: url('fire.gif');">
 
-<div id = "parent"><a href="index.html">Nova Ferûn</a></div>
+<div id = "sidebar">
+<div id = "indexlink"></div>
+</div>
 
 <div id = "body">
 <h1>Adonis</h1>
@@ -20,4 +22,5 @@ Adonis är Laharls häst.
 </div>
 
 </body>
+<script src="main.js"></script>
 </html>
