--- a/dave.html
+++ b/dave.html
@@ -6,7 +6,9 @@
 </head>
 <body>
 
-<div id = "parent"><a href="index.html">Nova Ferûn</a></div>
+<div id = "sidebar">
+<div id = "indexlink"></div>
+</div>
 
 <div id = "body">
 <h1>Dave</h1>
@@ -18,4 +20,9 @@ En odöd soldat från ett okänt antikt rike, vars enda mål i sin odöda existe
 </div>
 
 </body>
+
+<script src="main.js">
+    
+</script>
+
 </html>
