--- a/hagstooth.html
+++ b/hagstooth.html
@@ -6,7 +6,9 @@
 </head>
 <body>
 
-<div id = "parent"><a href="index.html">Nova Ferûn</a></div>
+<div id = "sidebar">
+<div id = "indexlink"></div>
+</div>
 
 <div id = "body">
 <h1>Hag's Tooth</h1>
@@ -20,4 +22,5 @@ This fang like piece of metal is given by a night hag to her disciples to grant 
 </div>
 
 </body>
+<script src="main.js"></script>
 </html>
