--- a/maintemplate.html
+++ b/maintemplate.html
@@ -6,7 +6,10 @@
 </head>
 <body>
 
-<div id = "parent"><a href="index.html">Nova Ferûn</a></div>
+<div id = "sidebar">
+<div id = "indexlink"></div>
+</div>
+
 
 <div id = "body">
 <h1>Title</h1>
@@ -15,4 +18,5 @@ Text
 </div>
 
 </body>
+<script src="main.js"></script>
 </html>
