--- a/novaferunregione.html
+++ b/novaferunregione.html
@@ -6,7 +6,9 @@
 </head>
 <body>
 
-<div id = "parent"><a href="index.html">Nova Ferûn</a></div>
+<div id = "sidebar">
+<div id = "indexlink"></div>
+</div>
 
 <div id = "body">
 <h1>Nova Ferûn Region E</h1>
@@ -21,4 +23,5 @@ För närvarande har bara en liten andel utförskat, och även inom denna andel 
 </div>
 
 </body>
+<script src="main.js"></script>
 </html>
