--- a/rockofgravitydetection.html
+++ b/rockofgravitydetection.html
@@ -6,14 +6,18 @@
 </head>
 <body>
 
-<div id = "parent"><a href="index.html">Nova Ferûn</a></div>
+<div id = "sidebar">
+<div id = "indexlink"></div>
+</div>
+
 
 <div id = "body">
 <h1>Rock of Gravity Detection</h1>
-<i>Mundane Item, Common</i>
+<i>Mundane Item, Common</i><br>
 This item is capable of detecting normal gravity in an area. Unless acted on by other forces, or having its path blocked, it will act in accordance with local gravity.
 
 </div>
 
 </body>
+<script src="main.js"></script>
 </html>
