--- a/talesofadventure.html
+++ b/talesofadventure.html
@@ -49,6 +49,13 @@ De reser i 2 dagar utan incident, men under den andra natten träffar de på en 
 Laharl och Akmenos (the goon squad) hittar en värdefull skatt i haggornas bostad, i form av ett antal magiska artifakter inklusive en underlig "tand" i svart metal, som de upptäcker kan transportera en resenär till the Ethereal Plane, där själar utan kroppar, spöken, och andra varelser finns. Gruppen fortsätter sedan resan, passerar och stötter på skuggbladen i deras by, och tar en omväg för att besöka döttsviskarnas by, där de talar med deras ledare, Senarax Döttsbindaren, upptäcker att hon har ett spöke som tjänar henne, och även får reda på att gruppen planerar eller designar någon form av stor magisk ritual, och att de försöker konstruera magiskt empowered ballistor med hjälp av ritningar som ser ut att komma från samma civilisation som äventyrarna och vandrar utposten, ett projekt som verkar ledas av en specifik ingenjörslig lizardfolk.
 <br><br>
 Gruppen vilar i staden och får även ett antal gåvor av Senarax, bland dem att hon kommer återuppliva den odöda varelsen känd som Dave.
+
+<h2>Tales of Adventure: Nova Ferûn X + 6, Death and Dragons</h2>
+Gruppen försöker undersöka döttsviskarnas ballista projekt, men Namak misslyckas med sina försök att observera obemärkt, och hans tvingas fly byn. Senarax verkar helt förstå att gruppen konspirerar mot henne, men låter dem ändå gå, någon som antyder att hon har någon form av hållhake, eller i alla fall anledning att tro att de fortfarande kan vara hjälpsamma för hennes planer. Namak duelerar och förgör Senarax förslavade spöke, och slår sönder det helt för att bannlysa det till efterlivet och därav skära av Senarax tillgång till the ethereal plane.
+<br><br>
+Gruppen fortsätter sin resa mot Fellwood och möter på en medlem av döttsviskar klanen som än inte känner till händelserna i byn, som försöker kontrollera en odöd wyvern. Gruppen hjälper henne med detta, och lyckas sedan magiskt övertyga henne att skriva ner magin som behövs för att själva ta kontroll. De tar sedan kontroll själva med bra användningar av sina färdigheter, och genom en imponerande användning av deras färdigheter tar de kontroll över varelsen. För att övertala lizardfolk magikern om att de inte konspirerat emot henne låter de varelsen attackera Laharl, som klart välsignad av turens gudinna Tymora tar mycket begränsad skada av varelsen.
+<br><br>
+Med varelsen under kontroll kan de äntligen fortsätta sin resa, och har ett praktiskt färdmedel för att ta sig till Fellwoods centrum och upptäcka dess hemligheter.
 </div>
 </body>
 <script src="main.js"></script>
