--- a/talesofadventure.html
+++ b/talesofadventure.html
@@ -56,6 +56,8 @@ Gruppen försöker undersöka döttsviskarnas ballista projekt, men Namak missly
 Gruppen fortsätter sin resa mot Fellwood och möter på en medlem av döttsviskar klanen som än inte känner till händelserna i byn, som försöker kontrollera en odöd wyvern. Gruppen hjälper henne med detta, och lyckas sedan magiskt övertyga henne att skriva ner magin som behövs för att själva ta kontroll. De tar sedan kontroll själva med bra användningar av sina färdigheter, och genom en imponerande användning av deras färdigheter tar de kontroll över varelsen. För att övertala lizardfolk magikern om att de inte konspirerat emot henne låter de varelsen attackera Laharl, som klart välsignad av turens gudinna Tymora tar mycket begränsad skada av varelsen.
 <br><br>
 Med varelsen under kontroll kan de äntligen fortsätta sin resa, och har ett praktiskt färdmedel för att ta sig till Fellwoods centrum och upptäcka dess hemligheter.
+<br><br>
+Under denna händelse kommer de också på en skrämmande tanke. Att planen som sammahåller döttsviskarna, och mer specifikt Senarax alla planer, kan vara att inte bara döda deras gud Karanax, som hon påstår sig vara lojal till, utan också sedan återuppväcka den och kontrollera den som en odöd tjänare. Det tycks inte som om detta är en plan som alla i hennes folk är helt med på.
 </div>
 </body>
 <script src="main.js"></script>
