--- a/index.html
+++ b/index.html
@@ -14,9 +14,11 @@
 <a href="talesofadventure.html">Tales of Adventure</a><br>
 
 <h2>Magic Items</h2>
-<a href="hagstooth.html">Hag's Tooth</a><br>
-<a href="rockofgravitydetection.html">Rock of Gravity Detection</a>
-
+<ul>
+<li><a href="hagstooth.html">Hag's Tooth</a><br></li>
+<li><a href="rockofgravitydetection.html">Rock of Gravity Detection</a></li>
+<li><a href="necklaceOfMyriadForms.html">Necklace of Myriad Forms</a></li>
+</ul>
 <h2>Regler</h2>
 <a href="permanentasummons.html">Permanenta summons regler och kostnads guideline</a><br>
 
