--- a/talesofadventure.html
+++ b/talesofadventure.html
@@ -58,6 +58,14 @@ Gruppen fortsätter sin resa mot Fellwood och möter på en medlem av döttsvisk
 Med varelsen under kontroll kan de äntligen fortsätta sin resa, och har ett praktiskt färdmedel för att ta sig till Fellwoods centrum och upptäcka dess hemligheter.
 <br><br>
 Under denna händelse kommer de också på en skrämmande tanke. Att planen som sammahåller döttsviskarna, och mer specifikt Senarax alla planer, kan vara att inte bara döda deras gud Karanax, som hon påstår sig vara lojal till, utan också sedan återuppväcka den och kontrollera den som en odöd tjänare. Det tycks inte som om detta är en plan som alla i hennes folk är helt med på.
+
+<h2>Tales of Adventure: Nova Ferûn X + 7, Heartfell Island</h2>
+Gruppen flyger till ön som utgör Fellwoods hjärta, och ser där en by med ett tempel byggt av mörkt fellwood trä i dess kärna, en sten byggnad där Fellwoods karakteristiska växtlighet inte verkar finnas och där små spår av vanlig växtlighet är synliga. Chance i örn form märker även druidiska symboler, och då gruppen landar där de markerats hittar de en grotta där en Nattsångare, en medlem av Chance's folk, befinner sig, en Tabaxi moon druid vid namn Claw.
+<br><br>
+Det blir snabbt tydligt att något är fel på Claw, hans minnen verkar inte tydliga, och hans kropp tycks inte vara helt hans egen. Det uppenbaras att Claw och två av de fyra nattsångare han kom till ön till dog i ett bakhåll, och Claw blev sedan dess återupplivad som en odöd varelse som Necrigals kult, öns primära invånare, försökt kontrollera men inte helt lyckats.
+<br><br>
+Gruppen strider mot en kult medlem som försöker göra med de andra två döda druiderna det som de gjorde med Claw, och han lyckas beordra Claw att attackera gruppen. Äventyrarna slår Claw och Chance lyckas bryta Necrigals kontroll över honom, till viss del. De finner ett magiskt halsband runt hans nacke, och i högen av de 2 nattsångarnas utrustning finner de 5 soul coins, och en magisk nyckel som ger dem tillgång till en välklädd mans hem, antagligen någon form av djävul, som verkar villig till handel.
+
 </div>
 </body>
 <script src="main.js"></script>
