--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <ul>
 <li><a href="hagstooth.html">Hag's Tooth</a><br></li>
 <li><a href="rockofgravitydetection.html">Rock of Gravity Detection</a></li>
-<li><a href="necklaceOfMyriadForms.html">Necklace of Myriad Forms</a></li>
+<li><a href="https://isacljungberg.github.io/asterdnd/boons/necklaceOfMyriadForms.html.html">Necklace of Myriad Forms</a></li>
 </ul>
 <h2>Regler</h2>
 <a href="permanentasummons.html">Permanenta summons regler och kostnads guideline</a><br>
